assertion failed: src/nm-ip6-config.c:1937:_add_route: assertion failed: (!new || +_route_valid (new))
Previously posted on https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=958384
Version: 1.23.90 with --enable-more-asserts
Since the last update of Network-Manager I cannot connect to my VPN anymore. As soon as the OpenVPN connection is established NM itself crashes with
Apr 20 14:54:45 nike.mist.a-ix.net NetworkManager[799346]: NetworkManager:ERROR:src/nm-ip6-config.c:1937:_add_route: assertion failed: (!new || _route_valid (new))
Apr 20 14:54:45 nike.mist.a-ix.net NetworkManager[799346]: Bail out! NetworkManager:ERROR:src/nm-ip6-config.c:1937:_add_route: assertion failed: (!new || _route_valid (new))
Tried it several times and it is always reproducable.
I then downgraded the package to
network-manager=1.22.10-1
libnm0=1.22.10-1
gir1.2-nm-1.0=1.22.10-1
and it was all working again.
I'll post a part of the log. If you need more of it I can clean it of personal information and attach it. If you need any more information I'm happy to provide what I can.
Thank you for your work,
Mirko