vpn: clear host part of IPv6 routes received from VPN plugin

Kernel would reject adding a route with a destination host part not
all zero. NetworkManager generally coerces such routes and there
are assertions in place to ensure that.

We forgot to ensure that for certain IPv6 routes from VPN plugins.
This can cause an assertion failure and wrong behavior.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/425

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/482
(cherry picked from commit b437bb4a6e8f4b1ca8678e8727b02b21d4cb7562)
(cherry picked from commit c7586e63885e1de9b80b9dc94feceea0f3fe4bf2)